k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
  namespace: crud-app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    http:
      paths:
        - path: /todo-backend(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: todo-backend
              port:
                number: 8080
